# commodity-flow-intelligence

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily-signal-check.yml
notebooks/: 00_original_reference.ipynb  01_delivery_gap_analysis.ipynb  02_wellhead_economics.ipynb  03_market_intelligence_briefing.ipynb
scripts/: signal_check.py
src/commodity_flow/: __init__.py  ais.py  analysis.py  charts.py  config.py  eia.py  futures.py  inventory.py  offline.py  provenance.py  refresh.py  synthetic.py
tests/: test_ais.py  test_analysis.py  test_charts.py  test_eia.py  test_futures.py  test_integration.py  test_inventory.py  test_offline.py  test_provenance.py  test_refresh.py  test_security.py  test_synthetic.py  test_unit_coherence.py  test_verification.py
